<resources>
    <string name="app_name">Cocktails</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="category">Category:</string>
    <string name="alcoholic">Alcoholic:</string>
    <string name="glass">Glass type:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions_title">Instructions:</string>
    <string name="instructions_for_tools">Combine all ingredients in a blender and blend at high speed until smooth. Serve in chilled glass garnished with bittersweet chocolate shavings.</string>
</resources>